# simplex

./: .gitmodules  CMakeLists.txt  CMakeOptions.cmake  README.md
simplexDevelopment/: CMakeLists.txt  main.cpp
simplexTuiDevelopment/: CMakeLists.txt  main.cpp
